Fix for Dark theme not readable (#8929)
* changed background color entry-selected (#7927)

* chaged color summary text select active/inactive (#7927)

* resolved threads (#7927)

* update CHANGELOG

--- a/src/main/java/org/jabref/gui/Dark.css
+++ b/src/main/java/org/jabref/gui/Dark.css
@@ -55,6 +55,9 @@
 
     -jr-drag-target: -jr-accent;
     -jr-drag-target-hover: -jr-accent;
+
+    -js-summary-text-color: derive(-fx-light-text-color, 70%);
+    -js-summary-text-color-selected: derive( -fx-dark-text-color, 70%);
 }
 
 #previewBody {
